2007-10-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Since i'm getting the 'metadata' in every case, pull it up to
	  the top. Did some fixing up for the handling of the basedirectory
	* src/FileSystem.cs, src/Files/PlaylistFile.cs: Did some fixing up for the
	  handling of the basedirectory
	* src/Camera.cs: Added a 'reconnect' method.

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/MusicFile.cs: Overrode equals and gethashcode

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/PlaylistFile.cs: Added some brackets to fix bug.

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Loading metadata on all filetypes now as opposed to selective
	  metadata/normal
	* src/FileSystem.cs: Added check for null aswel.
	* src/Files/PlaylistFile.cs: Playlist is loading metadata and contents fully
	  now.

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/PlaylistFile.cs: Fixed bug

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Added a helper method to split paths
	* src/Files/PlaylistFile.cs: Playlists are now being populated with a list
	  of the files in them

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: when storing values, if the value is null store an empty
	  string instead

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-05  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Made BaseDirectory internal 

2007-10-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Exposing the usb device and bus numbers to make it easier
	  to identify the device explicitly.

2007-10-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added a setter for Rating

2007-10-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Always return a non-null list even if no cameras are found

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 
